@@ -4,3 +4,4 @@
 
 DAnCE_Logger_Export unsigned int DAnCE_debug_level = 1;
 
+DAnCE_Logger_Export ACE_Log_Category DAnCE_log_category ("DAnCE");
